# fastiapi-vue-template

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250101000000_create_users_and_tokens.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: routes.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/models/: __init__.py  refresh_token.py  user.py
backend/app/infrastructure/auth/: providers.py
backend/app/infrastructure/cache/: redis.py
backend/app/infrastructure/db/: base.py  session.py
backend/app/infrastructure/db/repositories/: users.py
backend/app/infrastructure/messaging/: tasks.py
backend/app/schemas/: auth.py  token.py  user.py
backend/app/services/: __init__.py  auth.py  users.py
backend/app/tests/api/: test_health.py
docs/: project-overview.md
docs/architecture-decision-records/: README.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: http.ts  token-storage.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: DashboardView.vue  SettingsView.vue
frontend/src/views/Auth/: LoginView.vue  RegisterView.vue
frontend/tests/: setup.ts
frontend/tests/unit/: example.spec.ts
